syntax = "proto3";

package example.types;

message TopLevelField {
  string value = 1;
}
